--- a/Cafe Project/css.css
+++ b/Cafe Project/css.css
@@ -225,11 +225,11 @@ header * {
 
 #card-area{
         height: 80vh;
-        background: url("https://images.wallpapersden.com/image/download/my-simple-night_bWhoaGyUmZqaraWkpJRmbmdlrWZlbWU.jpg") center center/cover fixed;
+        background: url("https://images3.alphacoders.com/106/1066385.jpg") center center/cover fixed;
 }
 #offers {
   height: 80vh;
-  background: url("https://images.wallpapersden.com/image/download/my-simple-night_bWhoaGyUmZqaraWkpJRmbmdlrWZlbWU.jpg") center center/cover fixed;
+  background: url("https://images3.alphacoders.com/106/1066385.jpg") center center/cover fixed;
   display: flex;
   flex-direction: column;
   justify-content: center;
